// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email recipient fields component renders Add Attendee form 1`] = `
<DocumentFragment>
  <div
    class="usa-form-group"
    data-testid="formGroup"
  >
    <fieldset
      class="usa-fieldset"
    >
      <legend
        class="usa-label"
      >
        Choose recipients 
        <span
          class="text-error"
        >
          *
        </span>
      </legend>
      <p
        class="margin-bottom-0 margin-top-05"
      >
        <span
          class="text-bold"
        >
          2
        </span>
         recipients selected
      </p>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          checked=""
          class="usa-checkbox__input"
          id="notifyEuaIds.0"
          name="notifyEuaIds"
          type="checkbox"
          value="ABCD"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.0"
        >
          Adeline Aarons, CMS Wide (Requester)
        </label>
      </div>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          checked=""
          class="usa-checkbox__input"
          id="copyTrbMailbox"
          name="copyTrbMailbox"
          type="checkbox"
          value="true"
        />
        <label
          class="usa-checkbox__label"
          for="copyTrbMailbox"
        >
          Copy TRB Mailbox
        </label>
      </div>
      <button
        class="usa-button usa-button--unstyled truncated-content-button display-flex flex-align-center margin-top-2"
        data-testid="truncatedContentButton"
        type="button"
      >
        <svg
          class="usa-icon margin-x-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="m7 14 5-5 5 5z"
          />
        </svg>
         Show 2 fewer recipients
      </button>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          class="usa-checkbox__input"
          id="notifyEuaIds.1"
          name="notifyEuaIds"
          type="checkbox"
          value="SF13"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.1"
        >
          Jerry Seinfeld (Product Owner)
        </label>
      </div>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          class="usa-checkbox__input"
          id="notifyEuaIds.2"
          name="notifyEuaIds"
          type="checkbox"
          value="ADMI"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.2"
        >
          Audrey Abrams (System Owner)
        </label>
      </div>
      <fieldset
        class="usa-fieldset"
      >
        <div
          class="usa-form-group"
          data-testid="formGroup"
        >
          <label
            class="usa-label"
            for="euaUserId"
          >
            New recipient name
          </label>
          <div
            class="margin-top-1 cedar-contact-select usa-combo-box cedar-contact-select__loading maxw-none css-b62m3t-container"
            id="euaUserId"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-euaUserId-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="cedar-contact-select__control css-1b5q38d-control"
            >
              <div
                class="cedar-contact-select__value-container cedar-contact-select__value-container--has-value css-319lph-ValueContainer"
              >
                <div
                  class="cedar-contact-select__input-container css-1pndypt-Input"
                  data-value="Anabelle Jerde, JTTC"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Cedar-Users"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="cedar-contact-select__input"
                    data-testid="cedar-contact-select"
                    id="react-select-euaUserId-input"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value="Anabelle Jerde, JTTC"
                  />
                </div>
              </div>
              <div
                class="cedar-contact-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  aria-valuetext="Loading"
                  class="easi-spinner easi-spinner--small"
                  role="progressbar"
                />
                <div
                  aria-hidden="true"
                  class="cedar-contact-select__indicator cedar-contact-select__clear-indicator css-1e245h0-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class="cedar-contact-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="cedar-contact-select__indicator cedar-contact-select__dropdown-indicator css-1e245h0-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="euaUserId"
              type="hidden"
              value="[object Object]"
            />
          </div>
        </div>
        <div
          class="usa-form-group"
          data-testid="formGroup"
        >
          <label
            class="usa-label"
            for="component"
          >
            New recipient component
          </label>
          <select
            class="usa-select"
            data-testid="dropdown"
            id="component"
            name="component"
          >
            <option
              disabled=""
              label="- Select -"
            />
            <option
              value="Center for Clinical Standards and Quality"
            >
              Center for Clinical Standards and Quality (CCSQ)
            </option>
            <option
              value="Center for Consumer Information and Insurance Oversight"
            >
              Center for Consumer Information and Insurance Oversight (CCIIO)
            </option>
            <option
              value="Center for Medicare"
            >
              Center for Medicare (CM)
            </option>
            <option
              value="Center for Medicaid and CHIP Services"
            >
              Center for Medicaid and CHIP Services (CMCS)
            </option>
            <option
              value="Center for Medicare and Medicaid Innovation"
            >
              Center for Medicare and Medicaid Innovation (CMMI)
            </option>
            <option
              value="Center for Program Integrity"
            >
              Center for Program Integrity (CPI)
            </option>
            <option
              value="CMS Wide"
            >
              CMS Wide (CMS)
            </option>
            <option
              value="Emergency Preparedness and Response Operations"
            >
              Emergency Preparedness and Response Operations (EPRO)
            </option>
            <option
              value="Federal Coordinated Health Care Office"
            >
              Federal Coordinated Health Care Office (FCHCO)
            </option>
            <option
              value="Office of Acquisition and Grants Management"
            >
              Office of Acquisition and Grants Management (OAGM)
            </option>
            <option
              value="Office of Burden Reduction and Health Informatics"
            >
              Office of Burden Reduction and Health Informatics (OBRHI)
            </option>
            <option
              value="Office of Communications"
            >
              Office of Communications (OC)
            </option>
            <option
              value="Office of Enterprise Data and Analytics"
            >
              Office of Enterprise Data and Analytics (OEDA)
            </option>
            <option
              value="Office of Equal Opportunity and Civil Rights"
            >
              Office of Equal Opportunity and Civil Rights (OEOCR)
            </option>
            <option
              value="Office of Financial Management"
            >
              Office of Financial Management (OFM)
            </option>
            <option
              value="Office of Human Capital"
            >
              Office of Human Capital (OHC)
            </option>
            <option
              value="Office of Information Technology"
            >
              Office of Information Technology (OIT)
            </option>
            <option
              value="Office of Legislation"
            >
              Office of Legislation (OL)
            </option>
            <option
              value="Office of Minority Health"
            >
              Office of Minority Health (OMH)
            </option>
            <option
              value="Office of Program Operations and Local Engagement"
            >
              Office of Program Operations and Local Engagement (OPOLE)
            </option>
            <option
              value="Office of Security, Facilities, and Logistics Operations"
            >
              Office of Security, Facilities, and Logistics Operations (OSFLO)
            </option>
            <option
              value="Office of Strategic Operations and Regulatory Affairs"
            >
              Office of Strategic Operations and Regulatory Affairs (OSORA)
            </option>
            <option
              value="Office of Strategy, Performance, and Results"
            >
              Office of Strategy, Performance, and Results (OSPR)
            </option>
            <option
              value="Office of the Actuary"
            >
              Office of the Actuary (OA)
            </option>
            <option
              value="Offices of Hearings and Inquiries"
            >
              Offices of Hearings and Inquiries (OHI)
            </option>
            <option
              value="Other"
            >
              Other
            </option>
          </select>
        </div>
        <div
          class="usa-form-group"
          data-testid="formGroup"
        >
          <label
            class="usa-label"
            for="role"
          >
            New recipient role
          </label>
          <select
            class="usa-select"
            data-testid="dropdown"
            id="role"
            name="role"
          >
            <option
              disabled=""
              label="- Select -"
            />
            <option
              label="Product Owner"
              value="PRODUCT_OWNER"
            />
            <option
              label="System Owner"
              value="SYSTEM_OWNER"
            />
            <option
              label="System Maintainer"
              value="SYSTEM_MAINTAINER"
            />
            <option
              label="Contracting Officer’s Representative (COR)"
              value="CONTRACT_REP"
            />
            <option
              label="Cloud Navigator"
              value="CLOUD_NAVIGATOR"
            />
            <option
              label="Privacy Advisor"
              value="PRIVACY_ADVISOR"
            />
            <option
              label="CRA"
              value="CRA"
            />
            <option
              label="Other"
              value="OTHER"
            />
            <option
              label="Unknown"
              value="UNKNOWN"
            />
          </select>
        </div>
        <ul
          class="usa-button-group"
        >
          <li
            class="usa-button-group__item"
          >
            <button
              class="usa-button usa-button--outline"
              data-testid="button"
              type="button"
            >
              Cancel
            </button>
          </li>
          <li
            class="usa-button-group__item"
          >
            <button
              class="usa-button"
              data-testid="button"
              type="button"
            >
              Add recipient
            </button>
          </li>
        </ul>
      </fieldset>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`Email recipient fields component renders recipients 1`] = `
<DocumentFragment>
  <div
    class="usa-form-group"
    data-testid="formGroup"
  >
    <fieldset
      class="usa-fieldset"
    >
      <legend
        class="usa-label"
      >
        Choose recipients 
        <span
          class="text-error"
        >
          *
        </span>
      </legend>
      <p
        class="margin-bottom-0 margin-top-05"
      >
        <span
          class="text-bold"
        >
          2
        </span>
         recipients selected
      </p>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          checked=""
          class="usa-checkbox__input"
          id="notifyEuaIds.0"
          name="notifyEuaIds"
          type="checkbox"
          value="ABCD"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.0"
        >
          Adeline Aarons, CMS Wide (Requester)
        </label>
      </div>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          checked=""
          class="usa-checkbox__input"
          id="copyTrbMailbox"
          name="copyTrbMailbox"
          type="checkbox"
          value="true"
        />
        <label
          class="usa-checkbox__label"
          for="copyTrbMailbox"
        >
          Copy TRB Mailbox
        </label>
      </div>
      <button
        class="usa-button usa-button--unstyled truncated-content-button display-flex flex-align-center margin-top-2"
        data-testid="truncatedContentButton"
        type="button"
      >
        <svg
          class="usa-icon margin-x-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="m7 14 5-5 5 5z"
          />
        </svg>
         Show 2 fewer recipients
      </button>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          class="usa-checkbox__input"
          id="notifyEuaIds.1"
          name="notifyEuaIds"
          type="checkbox"
          value="SF13"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.1"
        >
          Jerry Seinfeld (Product Owner)
        </label>
      </div>
      <div
        class="easi-checkbox usa-checkbox"
      >
        <input
          class="usa-checkbox__input"
          id="notifyEuaIds.2"
          name="notifyEuaIds"
          type="checkbox"
          value="ADMI"
        />
        <label
          class="usa-checkbox__label"
          for="notifyEuaIds.2"
        >
          Audrey Abrams (System Owner)
        </label>
      </div>
      <button
        class="usa-button usa-button--outline"
        data-testid="button"
        type="button"
      >
        Add another recipient
      </button>
    </fieldset>
  </div>
</DocumentFragment>
`;
